@@ -1,55 +1,65 @@
-/* Emulation of getpagesize() for systems that need it.
-   Copyright (C) 1991 Free Software Foundation, Inc.
+/* Emulate getpagesize on systems that lack it.
+   Copyright (C) 1999, 2000 Free Software Foundation, Inc.
 
-This program is free software; you can redistribute it and/or modify
-it under the terms of the GNU General Public License as published by
-the Free Software Foundation; either version 2 of the License, or
-(at your option) any later version.
+   This program is free software; you can redistribute it and/or modify
+   it under the terms of the GNU General Public License as published by
+   the Free Software Foundation; either version 2, or (at your option)
+   any later version.
 
-This program is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-GNU General Public License for more details.
+   This program is distributed in the hope that it will be useful,
+   but WITHOUT ANY WARRANTY; without even the implied warranty of
+   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+   GNU General Public License for more details.
 
-You should have received a copy of the GNU General Public License
-along with this program; if not, write to the Free Software
-Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.  */
+   You should have received a copy of the GNU General Public License
+   along with this program; if not, write to the Free Software
+   Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307,
+   USA.  */
 
-#if defined (HAVE_UNISTD_H)
-#  include <unistd.h>
-#  if defined (_SC_PAGESIZE)
-#    define getpagesize() sysconf(_SC_PAGESIZE)
+#ifndef HAVE_GETPAGESIZE
+
+#ifdef HAVE_UNISTD_H
+# include <unistd.h>
+#endif
+
+#if !defined getpagesize && defined _SC_PAGESIZE
+# if !(defined VMS && __VMS_VER < 70000000)
+#  define getpagesize() sysconf (_SC_PAGESIZE)
+# endif
+#endif
+
+#if !defined getpagesize && defined VMS
+# ifdef __ALPHA
+#  define getpagesize() 8192
+# else
+#  define getpagesize() 512
+# endif
+#endif
+
+/* This is for BeOS.  */
+#if !defined getpagesize && HAVE_OS_H
+# include <OS.h>
+# if defined B_PAGE_SIZE
+#  define getpagesize() B_PAGE_SIZE
+# endif
+#endif
+
+#ifndef getpagesize
+# include <sys/param.h>
+# ifdef EXEC_PAGESIZE
+#  define getpagesize() EXEC_PAGESIZE
+# else
+#  ifdef NBPG
+#   ifndef CLSIZE
+#    define CLSIZE 1
+#   endif
+#   define getpagesize() (NBPG * CLSIZE)
 #  else
-#    if defined (_SC_PAGE_SIZE)
-#      define getpagesize() sysconf(_SC_PAGE_SIZE)
-#    endif /* _SC_PAGE_SIZE */
-#  endif /* _SC_PAGESIZE */
-#endif
-
-#if !defined (getpagesize)
-#  ifdef HAVE_SYS_PARAM_H
-#    include <sys/param.h>
+#   ifdef NBPC
+#    define getpagesize() NBPC
+#   endif
 #  endif
-#  if defined (PAGESIZE)
-#     define getpagesize() PAGESIZE
-#  else /* !PAGESIZE */
-#    if defined (EXEC_PAGESIZE)
-#      define getpagesize() EXEC_PAGESIZE
-#    else /* !EXEC_PAGESIZE */
-#      if defined (NBPG)
-#        if !defined (CLSIZE)
-#          define CLSIZE 1
-#        endif /* !CLSIZE */
-#        define getpagesize() (NBPG * CLSIZE)
-#      else /* !NBPG */
-#        if defined (NBPC)
-#          define getpagesize() NBPC
-#        endif /* NBPC */
-#      endif /* !NBPG */
-#    endif /* !EXEC_PAGESIZE */
-#  endif /* !PAGESIZE */
-#endif /* !getpagesize */
-
-#if !defined (getpagesize)
-#  define getpagesize() 4096  /* Just punt and use reasonable value */
+# endif
 #endif
+
+#endif /* not HAVE_GETPAGESIZE */
