@@ -1,3 +1,8 @@
+2004-10-21  Derek Price  <derek@ximbiot.com>
+
+	* Makefile.am (libcvs_a_SOURCES): Move getpagesize to its own section.
+	* getpagesize.h: Update from GNULIB.
+
 2004-10-21  Mark Baushke  <mdb@cvshome.org>
 
 	* Makefile.in: Regenerated.
